zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__for_with_return_type_with_nonstrictly_positive_recursive_ind_in_first_param_type_is_ng.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                for
                (
                    (
                        ind
                        Set0
                        "False"
                        ()
                        ()
                    )
                )
                (
                    for
                    (
                        (
                            for
                            (
                                1
                            )
                            (
                                ind
                                Set0
                                "False"
                                ()
                                ()
                            )
                        )
                    )
                    (
                        ind
                        Set0
                        "False"
                        ()
                        ()
                    )
                )
            )
        )
        ()
    )@(ByteIndex(42)..ByteIndex(319)),
    param_type_index: 0,
    normalized_param_type: (
        for
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
        (
            for
            (
                (
                    for
                    (
                        1
                    )
                    (
                        ind
                        Set0
                        "False"
                        ()
                        ()
                    )
                )
            )
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
