zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ind_app_with_recursive_ind_in_arg_as_first_param_type_is_ng.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                (
                    ind
                    Set1
                    "Bar"
                    (
                        Set0
                    )
                    (
                        (
                            ()
                            (
                                (
                                    ind
                                    Set0
                                    "False"
                                    ()
                                    ()
                                )
                            )
                        )
                    )
                )
                (
                    2
                    (
                        0
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
            )
        )
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
    )@(ByteIndex(88)..ByteIndex(441)),
    param_type_index: 0,
    normalized_param_type: (
        (
            ind
            Set1
            "Bar"
            (
                Set0
            )
            (
                (
                    ()
                    (
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
            )
        )
        (
            2
            (
                0
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
