zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__negative_appearance_in_param_type_is_illegal.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                for
                (
                    0
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        ()
    )@(ByteIndex(31)..ByteIndex(72)),
    param_type_index: 0,
    normalized_param_type: (
        for
        (
            0
        )
        (
            ind
            Set0
            "False"
            ()
            ()
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
