zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ng_first_param_type_contains_nonstrictly_positive_recursive_ind.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                for
                (
                    (
                        for
                        (
                            0
                        )
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        ()
    )@(ByteIndex(42)..ByteIndex(117)),
    param_type_index: 0,
    normalized_param_type: (
        for
        (
            (
                for
                (
                    0
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        (
            ind
            Set0
            "False"
            ()
            ()
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
