zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ng_first_param_type_is_normal_form_recursive_match_expr.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                match
                2
                1
                Set0
                (
                    (
                        0
                        0
                    )
                    (
                        0
                        0
                    )
                )
            )
        )
        ()
    )@(ByteIndex(103)..ByteIndex(320)),
    param_type_index: 0,
    normalized_param_type: (
        match
        2
        1
        Set0
        (
            (
                0
                0
            )
            (
                0
                0
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            2,
        ),
        NodeEdge(
            0,
        ),
    ],
}
