zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ng_second_param_type_is_app_where_arg_is_recursive.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
            (
                (
                    ind
                    Set1
                    "Bar"
                    (
                        Set0
                    )
                    (
                        (
                            ()
                            (
                                (
                                    ind
                                    Set0
                                    "False"
                                    ()
                                    ()
                                )
                            )
                        )
                    )
                )
                (
                    3
                    (
                        1
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
            )
        )
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
    )@(ByteIndex(88)..ByteIndex(484)),
    param_type_index: 1,
    normalized_param_type: (
        (
            ind
            Set1
            "Bar"
            (
                Set0
            )
            (
                (
                    ()
                    (
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
            )
        )
        (
            3
            (
                1
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
