zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ng_second_param_type_is_ind_where_first_vcon_def_second_param_type_is_problematic.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
            (
                for
                (
                    3
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        ()
    )@(ByteIndex(154)..ByteIndex(424)),
    param_type_index: 1,
    normalized_param_type: (
        for
        (
            3
        )
        (
            ind
            Set0
            "False"
            ()
            ()
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
